static/css/news.css
div.news-frontmatter {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: -32px;
}

.news-frontmatter {
  text-align: center;
}

.news-frontmatter .description {
  font-size: 1.5rem;
  font-style: italic;
  margin-top: 0;
}

div.news-metadata {
  margin-top: 0px;
  display: flex;
  flex-direction: column;
}

.news-metadata p {
  font-size: 1rem;
  display: inline;
}

.news-lastmodified-info p {
  font-style: italic;
}

.news-cover-image {
  max-width: auto;
  max-height: 200px;
  overflow: hidden;
  margin-bottom: 16px;
}

.news-cover-image img {
  object-fit: fill !important;
  margin: 0 auto !important;
  transform: translate(0%, -25%);
}

.news-cover-image a {
  pointer-events: none;
}

.news-container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

div#news-entries {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

#news-entries a {
  color: unset;
  transition: transform 0.05s ease-in-out;
}

#news-entries > a:hover {
  background-color: #f5f5f5;
  transform: scale(1.01);
}

#news-entries > a:not(:hover) {
  transform: scale(1) !important;
}

/* stop underlining the news entry box */
#news-entries a.highlight:after {
  content: unset;
  transition: none !important;
  -webkit-transition: none !important;
  -moz-transition: unset !important;
  -ms-transition: unset !important;
}

div.news-entry {
  border: solid 1px var(--MENU-SECTION-ACTIVE-CATEGORY-color);
  padding: 10px 10px 0px 10px;
}

.news-entry h2 {
  margin-top: 0px;
  margin-bottom: 8px;
}

.news-entry p {
  margin-top: 8px;
  margin-bottom: 8px;
}

.news-entry .news-metadata {
  font-size: 0.9rem;
}

